cmake_minimum_required(VERSION 3.25)
project(leetcode C)

set(CMAKE_C_STANDARD 11)

add_executable(leetcode
        src/leetcode1071.c
        src/leetcode1768.c src/leetcode1431.c src/leetcode605.c src/leetcode151.c src/leetcode27.c src/leetcode344.c src/leetcode238.c src/leetcode334.c src/leetcode443.c src/leetcode283.h)