cmake_minimum_required(VERSION 3.25)
project(leetcode C)

set(CMAKE_C_STANDARD 11)

add_executable(leetcode
        src/leetcode1071.h
        src/leetcode1768.h src/leetcode1431.h src/leetcode605.h src/leetcode151.h src/leetcode27.h src/leetcode344.h src/leetcode238.h src/leetcode334.h src/leetcode443.h src/leetcode283.h src/leetcode392.h src/leetcode.c src/leetcode11.h src/leetcode1679.h src/leetcode643.h)